<resources>
    <string name="app_name">Safety App</string>
    <string name="action_settings">Settings</string>
    <string name="action_locationHistory">Location History</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="action_select_all">select all</string>
    <string name="action_manage_contacts">Manage Contacts</string>
    <string name="action_add_contacts">Add Contacts</string>
    <string name="action_save_contact">Save</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="info_header">Personal Info</string>

    <string name="customMessage_title">Custom Message</string>
    <string name="customMessageSwitch_title">Custom Message</string>

    <!-- Messages Preferences -->
    <string name="username_title">Your Name</string>
    <string name="userEmail_title">Your Email</string>
    <string name="userPhone_title">Your Phone</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="phone_text_view_title">phone</string>
    <string name="contact_text_view_title">TextView</string>
    <string name="checkbox_img_content_desc">checkBox</string>
    <string name="initial_avatar_icon_text">I</string>
</resources>